modified styles to prevent the event title from overlapping on the image

--- a/dal-chess-club-x691/src/styles/tournaments.css
+++ b/dal-chess-club-x691/src/styles/tournaments.css
@@ -90,6 +90,15 @@
   background-position: center;
 }
 
+.eevent-image {
+  width: 375px;
+  height:425px;
+  margin-top: 100px;
+  margin-left: 30px;
+  background-size: cover;
+  background-position: center;
+}
+
 .ttournament-info h1{
   margin-top:-500px;
 }
